--- a/src/index.css
+++ b/src/index.css
@@ -37,18 +37,45 @@ a:hover{
 
 
 input,textarea,select{
-  border-radius: 0 !important;
-  border:1px solid #04469757  !important;
+  border-radius: 4px !important;
+  border:1px solid #00000070!important;
   box-shadow: var(--sombraC);
-
   
+}
+
+.input-group-text{
+  background-color: #dddddda6;
+  
+ 
 }
 
 
 input:focus,textarea:focus,select:focus{
   
-  box-shadow: 0 0 6px 2px rgba(4, 70, 151, 0.4) /* Sombra suave */!important;
+   /*box-shadow: 0 0 6px 2px rgba(4, 70, 151, 0.4) Sombra suave */
+   box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2) /* Sombra preta */
 
+   !important;
+
+}
+
+@media (min-width:1300px){
+  
+.input-group-text{
+  background-color: #dddddde1;
+  
+ 
+}
+
+
+input:focus,textarea:focus,select:focus{
+  
+  /*box-shadow: 0 0 6px 2px rgba(4, 70, 151, 0.4) Sombra suave */
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.3) /* Sombra preta */
+
+  !important;
+
+}
 }
 
 .fortificarLetter{
