--- a/src/App.css
+++ b/src/App.css
@@ -198,3 +198,11 @@
     text-decoration: underline;
     margin:30px 0 ;
 }
+
+.visual-order{
+
+    border: 4px solid var(--corPrimaria) !important;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: var(--sombraA) !important;
+}
