--- a/src/App.css
+++ b/src/App.css
@@ -201,9 +201,10 @@
 
 .visual-order{
 
-    border: 4px solid var(--corPrimaria) !important;
+    border: 6px solid var(--corPrimaria) !important;
+    border-top: 10px solid var(--corPrimaria) !important;
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 25px;
     box-shadow: var(--sombraA) !important;
 }
 
