--- a/src/App.css
+++ b/src/App.css
@@ -216,3 +216,17 @@
     font-size: .9em;
 }
 
+.text-justify{
+    text-align: justify;
+}
+
+
+.selected-client {
+    background-color: #0070fa; /* Cor de fundo azul */
+    color: white; /* Cor do texto */
+    border: 2px solid #005bb5; /* Borda de destaque */
+  }
+  .selected-client:hover {
+    background-color: #005bb5; /* Cor de fundo ao passar o mouse */
+  }
+  
