--- a/src/css/StylesFuncionario/cartaz.css
+++ b/src/css/StylesFuncionario/cartaz.css
@@ -1,8 +1,8 @@
 .seccao-cartaz {
   background-color: #000000;
   width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  height: 100% !important;
+  min-height: 100vh !important;
   color: #fff;
 }
 
@@ -263,4 +263,11 @@
   transition: .300ms all ease-in;
   display: block;
   cursor: pointer;
+}
+
+
+.DifinirEspecial{
+  display: block !important;
+  margin: auto !important;
+  border: 2px solid #fff;
 }
