--- a/src/css/StylesAdmin/loginAdmin.css
+++ b/src/css/StylesAdmin/loginAdmin.css
@@ -1,31 +1,33 @@
 .AllBodyLogin {
-    background-color: #201F24; /* Cor de fundo */
-    min-height: 100vh; /* Altura mínima da viewport */
-    height: 100%; /* Garante que a altura seja 100% do elemento pai */
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)),
+        url("../../assets/fundoOficina.jpg");
+    /* Cor de fundo */
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    /* Altura mínima da viewport */
+    height: 100%;
+    /* Garante que a altura seja 100% do elemento pai */
     width: 100% !important;
-    
 }
 
-
-.LoginAdmistrador{
+.LoginAdmistrador {
     border: 4px solid #fff;
     color: #fff !important;
     border-radius: var(--borderRadius);
-    background-color: #201F24 !important;
-    
-    
+    background-color: #201f24 !important;
 }
 
-
-
-.TabAcesso{
-
-    left:50% !important;
+.TabAcesso {
+    left: 50% !important;
     top: 50% !important;
-    transform: translate(-50%,-50%) !important;
+    transform: translate(-50%, -50%) !important;
     position: absolute;
-   
 }
+
+
 
 /*#000080
 
@@ -38,4 +40,3 @@ f8f5f0
 // #0047AB
 
 201f24*/
-
